--- a/ubuntu1910/Dockerfile
+++ b/ubuntu1910/Dockerfile
@@ -18,37 +18,37 @@ FROM ubuntu:19.10
 
 # Tweaks/Fixes From Canonical
 
-RUN [ -z "$(apt-get indextargets)" ] 
+RUN [ -z "$(apt-get indextargets)" ]
 # <https://bugs.launchpad.net/cloud-images/+bug/1699913)>
 
 # a few minor docker-specific tweaks <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap>
 RUN set -xe \
     \
-# <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L40-L48>
+    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L40-L48>
     && echo '#!/bin/sh' > /usr/sbin/policy-rc.d \
     && echo 'exit 101' >> /usr/sbin/policy-rc.d \
     && chmod +x /usr/sbin/policy-rc.d \
     \
-# <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L54-L56>
+    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L54-L56>
     && dpkg-divert --local --rename --add /sbin/initctl \
     && cp -a /usr/sbin/policy-rc.d /sbin/initctl \
     && sed -i 's/^exit.*/exit 0/' /sbin/initctl \
     \
-# <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L71-L78>
+    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L71-L78>
     && echo 'force-unsafe-io' > /etc/dpkg/dpkg.cfg.d/docker-apt-speedup \
     \
-# <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L85-L105>
+    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L85-L105>
     && echo 'DPkg::Post-Invoke { "rm -f /var/cache/apt/archives/*.deb /var/cache/apt/archives/partial/*.deb /var/cache/apt/*.bin || true"; };' > /etc/apt/apt.conf.d/docker-clean \
     && echo 'APT::Update::Post-Invoke { "rm -f /var/cache/apt/archives/*.deb /var/cache/apt/archives/partial/*.deb /var/cache/apt/*.bin || true"; };' >> /etc/apt/apt.conf.d/docker-clean \
     && echo 'Dir::Cache::pkgcache ""; Dir::Cache::srcpkgcache "";' >> /etc/apt/apt.conf.d/docker-clean \
     \
-# <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L109-L115>
+    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L109-L115>
     && echo 'Acquire::Languages "none";' > /etc/apt/apt.conf.d/docker-no-languages \
     \
-# <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L118-L130>
+    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L118-L130>
     && echo 'Acquire::GzipIndexes "true"; Acquire::CompressionTypes::Order:: "gz";' > /etc/apt/apt.conf.d/docker-gzip-indexes \
     \
-# <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L134-L151>
+    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L134-L151>
     && echo 'Apt::AutoRemove::SuggestsImportant "false";' > /etc/apt/apt.conf.d/docker-autoremove-suggests
 
 # make systemd-detect-virt return "docker" <https://github.com/systemd/systemd/blob/aa0c34279ee40bce2f9681b496922dedbadfca19/src/basic/virt.c#L434>
@@ -57,7 +57,10 @@ RUN mkdir -p /run/systemd && echo 'docker' > /run/systemd/container
 
 # Update Everything
 COPY ./cfg/sources.list /etc/apt/sources.list
-RUN apt-get update && apt-get full-upgrade -y && apt-get autoclean && apt-get autoremove
+RUN apt-get update
+RUN apt-get full-upgrade -y
+RUN apt-get autoclean
+RUN apt-get autoremove
 
 # Cleanup
 RUN rm -rf /tmp/*
