--- a/ubuntu1910-libtorrent_1.2.5/docker-compose.yml
+++ b/ubuntu1910-libtorrent_1.2.5/docker-compose.yml
@@ -1,4 +1,4 @@
-# Ubuntu 19.10 w/ Boost Library v1.72.0 & B2 (Boost Build)
+# Ubuntu 19.10 w/ LibTorrent (Latest)
 # Copyright © 2020 Jerod Gawne <https://github.com/jerodg>
 
 # This program is free software: you can redistribute it and/or modify
@@ -14,25 +14,31 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-FROM jerodg/ubuntu1910-python382-20200303
+FROM jerodg/ubuntu1910-boost_1.72.0-20200324
 
 # Install Updates & Pre-Requisites
-RUN apt-get update
-RUN apt-get full-upgrade
+# Fulfilled in parent image.
 
-# Install Boost Libraries
 WORKDIR /tmp
-RUN wget https://dl.bintray.com/boostorg/release/1.72.0/source/boost_1_72_0.tar.gz
-RUN tar xzf boost_1*.tar.gz
+RUN wget https://github.com/arvidn/libtorrent/archive/libtorrent-1_2_5.tar.gz
+RUN tar xzf libtorrent-1_2_5.tar.gz
 
-# Build B2
-WORKDIR /tmp/boost_1_72_0/tools/build
-RUN ./bootstrap.sh --with-toolset=gcc
-RUN ./b2 install -a --prefix=/usr/local
-
-# Build Boost
-WORKDIR /tmp/boost_1_72_0
-RUN b2 -a toolset=gcc runtime-link=shared threading=multi --build-dir=/usr/local/lib release
+WORKDIR /tmp/libtorrent-1_2_5
+COPY ./cfg/user-config.jam /tmp/libtorrent-1_2_5/user-config.jam
+RUN b2 -a toolset=gcc \
+          runtime-link=shared \
+          threading=multi \
+          dht=on \
+          encryptions=on \
+          mutable-torrents=on \
+          i2p=on \
+          extensions=on \
+          streaming=on \
+          super-seeding=on \
+          share-mode=on \
+          predictive-pieces=on \
+          --build-dir=/usr/local/lib release
+RUN b2 install --prefix=/usr/local
 
 # Cleanup
 RUN rm -rf /tmp/*
@@ -40,6 +46,4 @@ RUN apt-get autoclean
 RUN apt-get autoremove
 
 # References
-# https://www.boost.org/doc/libs/1_72_0/more/getting_started/unix-variants.html
-# https://github.com/boostorg/build
-# Boost Release Page: https://www.boost.org/users/download/
+# https://github.com/arvidn/libtorrent/blob/RC_1_2/docs/building.rst#build-configurations
