--- a/ubuntu_20.04/Dockerfile
+++ b/ubuntu_20.04/Dockerfile
@@ -1,71 +1,41 @@
 # syntax=docker/dockerfile:experimental
-# Ubuntu 20.04 Base Docker Image (Development)
-# Copyright © 2020 Jerod Gawne <https://github.com/jerodg>
 
+# Ubuntu 20.04 Base Docker Image Optimized for Containers
+# Copyright © 2020 Jerod Gawne <https://github.com/jerodg>
+#
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
 # published by the Free Software Foundation, either version 3 of the
 # License, or (at your option) any later version.
-
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU Affero General Public License for more details.
-
+#
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
 FROM --platform=linux/amd64 ubuntu:focal
 
+ENV LANG=en_US.UTF-8
+ENV LANGUAGE=en_US
+ENV LC_ALL=en_US.UTF-8
+ENV TZ=UTC
 
 # Update Everything
 COPY ./cfg/sources.list /etc/apt/sources.list
 RUN apt-get update
-RUN apt-get full-upgrade -y
-
-
-# Tweaks/Fixes From Canonical
-RUN [ -z "$(apt-get indextargets)" ]
-# <https://bugs.launchpad.net/cloud-images/+bug/1699913)>
-
-# a few minor docker-specific tweaks <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap>
-RUN set -xe \
-    \
-    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L40-L48>
-    && echo '#!/bin/sh' > /usr/sbin/policy-rc.d \
-    && echo 'exit 101' >> /usr/sbin/policy-rc.d \
-    && chmod +x /usr/sbin/policy-rc.d \
-    \
-    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L54-L56>
-    && dpkg-divert --local --rename --add /sbin/initctl \
-    && cp -a /usr/sbin/policy-rc.d /sbin/initctl \
-    && sed -i 's/^exit.*/exit 0/' /sbin/initctl \
-    \
-    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L71-L78>
-    && echo 'force-unsafe-io' > /etc/dpkg/dpkg.cfg.d/docker-apt-speedup \
-    \
-    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L85-L105>
-    && echo 'DPkg::Post-Invoke { "rm -f /var/cache/apt/archives/*.deb /var/cache/apt/archives/partial/*.deb /var/cache/apt/*.bin || true"; };' > /etc/apt/apt.conf.d/docker-clean \
-    && echo 'APT::Update::Post-Invoke { "rm -f /var/cache/apt/archives/*.deb /var/cache/apt/archives/partial/*.deb /var/cache/apt/*.bin || true"; };' >> /etc/apt/apt.conf.d/docker-clean \
-    && echo 'Dir::Cache::pkgcache ""; Dir::Cache::srcpkgcache "";' >> /etc/apt/apt.conf.d/docker-clean \
-    \
-    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L109-L115>
-    && echo 'Acquire::Languages "none";' > /etc/apt/apt.conf.d/docker-no-languages \
-    \
-    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L118-L130>
-    && echo 'Acquire::GzipIndexes "true"; Acquire::CompressionTypes::Order:: "gz";' > /etc/apt/apt.conf.d/docker-gzip-indexes \
-    \
-    # <https://github.com/docker/docker/blob/9a9fc01af8fb5d98b8eec0740716226fadb3735c/contrib/mkimage/debootstrap#L134-L151>
-    && echo 'Apt::AutoRemove::SuggestsImportant "false";' > /etc/apt/apt.conf.d/docker-autoremove-suggests
-
-# make systemd-detect-virt return "docker" <https://github.com/systemd/systemd/blob/aa0c34279ee40bce2f9681b496922dedbadfca19/src/basic/virt.c#L434>
-RUN mkdir -p /run/systemd && echo 'docker' > /run/systemd/container
-
+RUN apt-get -y full-upgrade
 
 # Cleanup
 RUN rm -rf /tmp/*
 RUN apt-get autoclean
 RUN apt-get autoremove
 
+LABEL version="1.0.0"
+LABEL maintainer="Jerod Gawne <https://github.com/jerodg>"
 
-LABEL version=""
-LABEL maintainer=""
+
+# Use For Development; Keeps the Container Running
+# ENTRYPOINT ["/bin/bash", "-c", "while true; do sleep 1; done"]
